# starknet-ctf

./: package-lock.json  package.json  pyproject.toml
access-denied/: main.py
access-denied/contracts/openzeppelin/account/presets/: Account.cairo
access-denied/deploy/: chal.py
account-obstruction/: main.py
account-obstruction/contracts/openzeppelin/account/: library.cairo
account-obstruction/contracts/openzeppelin/account/presets/: Account.cairo
account-obstruction/deploy/: chal.py
cairo-bid/: main.py
cairo-bid/contracts/: bid.cairo
cairo-bid/deploy/: chal.py
claim-a-punk/: main.py
claim-a-punk/contracts/: claim_a_punk.cairo
claim-a-punk/contracts/openzeppelin/account/presets/: Account.cairo
claim-a-punk/deploy/: chal.py
dna/: main.json  main.py
dna/contracts/: main.cairo
dna/deploy/: chal.py
magic-encoding/: main.py
magic-encoding/deploy/: chal.py
solve-me/: main.py
solve-me/deploy/: chal.py
unique-id/: main.mjs  main.py
unique-id/contracts/: implementation_v1.cairo
unique-id/deploy/: chal.py
