[tool.poetry]
name = "starknet-ctf"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clement0walter@gmail.com>"]
readme = "README.md"
packages = [{ include = "starknet_ctf" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
cairo-lang = "0.10.0"
starknet-devnet = "0.3.3"
starknet-py = "0.5.2a"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
